@@ -480,7 +480,7 @@ public class HierarchyCircuitBreakerService extends CircuitBreakerService {
         List<GarbageCollectorMXBean> youngBeans = ManagementFactory.getGarbageCollectorMXBeans()
             .stream()
             .filter(mxBean -> GcNames.getByGcName(mxBean.getName(), mxBean.getName()).equals(GcNames.YOUNG))
-            .collect(Collectors.toList());
+            .toList();
         assert youngBeans.size() == 1;
         assert youngBeans.get(0).getCollectionCount() != -1 : "G1 must support getting collection count";
 
